; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_preview_set_inaddr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_preview_set_inaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp_prev_device = type { i32 }
%struct.isp_device = type { i32 }

@OMAP3_ISP_IOMEM_PREV = common dso_local global i32 0, align 4
@ISPPRV_RSDR_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isp_prev_device*, i32)* @preview_set_inaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @preview_set_inaddr(%struct.isp_prev_device* %0, i32 %1) #0 {
  %3 = alloca %struct.isp_prev_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.isp_device*, align 8
  store %struct.isp_prev_device* %0, %struct.isp_prev_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.isp_prev_device*, %struct.isp_prev_device** %3, align 8
  %7 = call %struct.isp_device* @to_isp_device(%struct.isp_prev_device* %6)
  store %struct.isp_device* %7, %struct.isp_device** %5, align 8
  %8 = load %struct.isp_device*, %struct.isp_device** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @OMAP3_ISP_IOMEM_PREV, align 4
  %11 = load i32, i32* @ISPPRV_RSDR_ADDR, align 4
  %12 = call i32 @isp_reg_writel(%struct.isp_device* %8, i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local %struct.isp_device* @to_isp_device(%struct.isp_prev_device*) #1

declare dso_local i32 @isp_reg_writel(%struct.isp_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
